update modules to have same margins as on the about page, correct uncentered items on mobile, change 3 column layout to have different margins from css

--- a/wp-content/themes/whospeaksforme/assets/css/ie.css
+++ b/wp-content/themes/whospeaksforme/assets/css/ie.css
@@ -1481,14 +1481,28 @@ p a {
 	}
 }
 
+.acf-three_columns {
+	justify-content: center;
+}
+
 .acf-three_columns > div {
-	width: 80%;
-	margin: 0 10%;
+	width: 84%;
+	margin: 0 auto;
 }
 @media only screen and (min-width: 822px) {
 
 	.acf-three_columns > div {
-		width: 29.5%;
+		width: 28%;
+		margin: 0;
+	}
+}
+
+.acf-three_columns > div:nth-of-type(2) {
+	margin: 0 auto;
+}
+@media only screen and (min-width: 822px) {
+
+	.acf-three_columns > div:nth-of-type(2) {
 		margin: 0 2%;
 	}
 }
@@ -1564,13 +1578,14 @@ p a {
 @media only screen and (max-width: 821px) {
 
 	.acf-two_columns .column:first-of-type {
-		width: 96% !important;
+		width: 84% !important;
 		padding: 50px 0;
-		margin: 30px 2%;
+		margin: 30px auto;
 	}
 }
 
 .acf-two_columns .column {
+	margin: 0 0 0 2%;
 	flex-direction: column;
 }
 
@@ -1590,6 +1605,8 @@ p a {
 	.acf-two_columns .column.scroll-image figure,
 	.acf-two_columns .column.scroll-image p {
 		position: relative;
+		padding: 50px 0;
+		margin: 30px 0;
 	}
 }
 
@@ -1610,8 +1627,8 @@ p a {
 @media only screen and (max-width: 821px) {
 
 	.acf-two_columns .column {
-		width: 96% !important;
-		margin: 5% 2%;
+		width: 84% !important;
+		margin: 5% auto;
 	}
 }
 
